<resources>
    <string name="app_name">Yandex School Test</string>
    <string name="translation">translation</string>
    <string name="history">history</string>
    <string name="settings">settings</string>
    <string name="noun">noun</string>
    <string name="adjective">adj</string>
    <string name="participle">participle</string>
    <string name="verb">verb</string>
    <string name="preposition">prep</string>
    <string name="conjunction">conjunction</string>
    <string name="interjection">interjection</string>
    <string name="pronoun">pronoun</string>
    <string name="adverb">adv</string>
    <string name="particle">particle</string>
    <string name="dict_key" translatable="false">dict.1.1.20170316T101625Z.9c8869c5e0c5e541.abb8f7fd5111c1c6e19ffed945601865a03a68dc</string>
    <string name="trans_key" translatable="false">trnsl.1.1.20170316T115411Z.c5faf1706c905a38.813ea9a83054bdd7bfe243d1cab64ab4823ed02e</string>
    <string name="Repeat">Repeat</string>
    <string name="UnknownError">Unknown error</string>
    <string name="ConnectionError">Network connection error</string>
    <string name="CheckConnection">Check your network connection and try again</string>
    <string name="Error">Error</string>
    <string name="BadKey">Bad API key</string>
    <string name="BlockedKey">Your API key is blocked</string>
    <string name="TooManyReqs">Daily limit of requests exceeded</string>
    <string name="TooBigText">Text is too big</string>
    <string name="TextCantBeTranslated">This text cannot be translated</string>
    <string name="DirectionNotSupported">Language direction not supported</string>
    <string name="numeral">num</string>
    <string name="LangOfText">Language of text</string>
    <string name="LangOfTrsl">Language of translation</string>
    <string name="DetermineLang">Determine the language</string>
    <string name="RecentLangs">Recently used</string>
    <string name="AllLangs">All languages</string>
    <string name="DeterminedAutomatically">(Determined automatically)</string>
    <string name="UnableToDetermine">Unable to determine</string>
    <string name="sdk_key" translatable="false">6c24ffb1-7ba3-4170-bb61-24b2b9083229</string>
    <string name="UnableToSynthesizeSpeech">Unable to synthesize speech</string>
    <string name="TranslationCopied">Translation was copied to clipboard</string>
    <string name="History">History</string>
    <string name="Favorite">Favorite</string>
    <string name="Delete">Delete</string>
    <string name="WannaClearFavorite">Are you sure you want to clear favorite list?</string>
    <string name="WannaClearHistory">Are you sure you want to clear history?</string>
    <string name="Cancel">Cancel</string>
    <string name="Clear">Clear</string>
    <string name="ListIsEmpty">The list is empty</string>
    <string name="Settings">Settings</string>
    <string name="SyncTranslation">Simultaneous translation</string>
    <string name="ShowDictionary">Show dictionary</string>
    <string name="ReturnForTranslation">Return for translation</string>
    <string name="About">About</string>
    <string name="AboutText">An application for Yandex Mobile School 2017 Msk. It uses Yandex Translation API, Yandex Dictionary API and Yandex Mobile Speech SDK.</string>
    <string name="version" translatable="false">v 1.0.0</string>
    <string name="createdby" translatable="false">created by Dedoxyribose (Bug Light, whatever)</string>
    <string name="copyright" translatable="false">© BugLight, 2017</string>
    <string name="ApplicationUnavailable">Sorry, unfortunately application is now unavailable</string>
</resources>
