<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/rlContainer">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Settings"
                android:textSize="20sp"
                android:textColor="@color/colorBlackText" />


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:orientation="vertical">


        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SyncTranslation"
            android:textSize="17sp"
            android:id="@+id/sSync"
            android:checked="true"
            android:padding="15dp"
            android:background="@drawable/lang_item_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView2"
            android:background="@color/colorLightGray" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ShowDictionary"
            android:textSize="17sp"
            android:id="@+id/sDict"
            android:checked="true"
            android:padding="15dp"
            android:background="@drawable/lang_item_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView3"
            android:background="@color/colorLightGray" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ReturnForTranslation"
            android:textSize="17sp"
            android:id="@+id/sReturn"
            android:checked="true"
            android:padding="15dp"
            android:background="@drawable/lang_item_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView4"
            android:background="@color/colorLightGray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView5"
            android:background="@color/colorBeige" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView6"
            android:background="@color/colorLightGray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/About"
            android:id="@+id/tvAbout"
            android:textSize="17sp"
            android:textColor="@color/colorBlackText"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:background="@drawable/lang_item_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView7"
            android:background="@color/colorLightGray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView8"
            android:background="@color/colorBeige" />

    </LinearLayout>


</RelativeLayout>